--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -2,3 +2,15 @@ agm-map {
   width: 100%;
   height: 100%;
 }
+
+agm-map {
+  width: 100%;
+  height: 64%;
+}
+
+@media (min-width: 1200px) {
+  agm-map {
+    width: 100%;
+    height: 100%;
+  }
+}
