--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,10 +1,10 @@
 <div class="card">
   <!--<img class="card-img-top" src="..." alt="Card image cap">-->
-  <div class="card-header bg-primary text-white">
+  <div class="card-header">
     <div class="container-fluid">
       <div class="row">
         <div class="col-2">
-          <img src="/assets/hackregina.png" style="height: 60px" alt="">
+          <img src="./assets/hackregina.png" style="height: 60px" alt="">
         </div>
         <div class="col-10">
           <h4 class="card-title col-12">HackRegina</h4>
