feat: Add link to main hack regina page

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,10 +3,17 @@
   <div class="card-header">
     <div class="row">
       <div class="col-2 .d-xl">
-        <img src="./assets/hackregina.png" style="height: 60px" alt="">
+        <a href="https://hackregina.github.io/">
+          <img src="./assets/hackregina.png" style="height: 60px" alt="">
+        </a>
       </div>
       <div class="col-10 col-lg-12 col-xl-10">
-        <h4 class="card-title col-12">HackRegina</h4>
+
+        <h4 class="card-title col-12">
+          <a href="https://hackregina.github.io/">
+            HackRegina
+          </a>
+        </h4>
         <p class="card-text col-12">Regina Tech Map </p>
       </div>
     </div>
