--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-2 .d-xl">
         <a href="https://hackregina.github.io/">
-          <img src="./assets/hackregina.png" style="height: 60px" alt="">
+          <img src="./assets/hackregina.png" height="60px" alt="">
         </a>
       </div>
       <div class="col-10 col-lg-12 col-xl-10">
