--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -10,6 +10,18 @@
   </div>
 </div>
 <div class="card-body">
+  <div *ngIf="companyService.companies[0].sponsorship">
+    <p class="font-weight-bold">Sponsorship Tier:</p>
+    <p>{{companyService.companies[0].sponsorship | titlecase}} Sponsor</p>
+  </div>
+  <div class="my-3">
+    <p class="font-weight-bold">Address:</p>
+    <p>{{companyService.companies[0].address}}</p>
+  </div>
+  <div class="my-3">
+    <p class="font-weight-bold">Website:</p>
+    <p><a [href]="companyService.companies[0].website">{{companyService.companies[0].website}}</a></p>
+  </div>
   <div class="row mt-3">
     <div class="col-12 font-weight-bold">
       Tech:
@@ -19,22 +31,6 @@
               class="btn btn-outline-info mr-3 mb-3" [routerLink]="['/tech',tech]">
         {{tech}}
       </button>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-12 font-weight-bold">
-      Address:
-    </div>
-    <div class="col-12 mt-3">
-      {{companyService.companies[0].address}}
-    </div>
-  </div>
-  <div class="row mt-3">
-    <div class="col-12 font-weight-bold">
-      Website:
-    </div>
-    <div class="col-12 mt-3">
-      <a [href]="companyService.companies[0].website">{{companyService.companies[0].website}}</a>
     </div>
   </div>
 </div>
