--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,11 @@
 $fa-font-path: "../node_modules/font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome.scss";
 
+$sponsor-platinum: #8ebfa8;
+$sponsor-gold: #daa520;
+$sponsor-silver: #808080;
+$sponsor-bronze: #cd7f32;
+
 html, body {
   width: 100%;
   height: 100%;
@@ -17,3 +22,18 @@ html, body {
   background-color: white;
 }
 
+.text-platinum {
+  color: $sponsor-platinum !important
+}
+
+.text-gold {
+  color: $sponsor-gold !important
+}
+
+.text-silver {
+  color: $sponsor-silver !important
+}
+
+.text-bronze {
+  color: $sponsor-bronze !important
+}
