--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,22 +1,10 @@
 <div class="card">
   <!--<img class="card-img-top" src="..." alt="Card image cap">-->
   <div class="card-header">
-    <div class="row">
-      <div class="col-2 .d-xl">
-        <a href="https://hackregina.github.io/">
-          <img src="./assets/hackregina.png" height="60px" alt="">
-        </a>
-      </div>
-      <div class="col-10 col-lg-12 col-xl-10">
-
-        <h4 class="card-title col-12">
-          <a href="https://hackregina.github.io/">
-            HackRegina
-          </a>
-        </h4>
-        <p class="card-text col-12">Regina Tech Map </p>
-      </div>
-    </div>
+    <a href="https://hackregina.github.io/">
+      <img src="./assets/hackregina.png" alt="HackRegina" class="img-fluid">
+    </a>
+    <p class="text-center card-text text-uppercase">Regina Tech Map</p>
   </div>
   <router-outlet></router-outlet>
 </div>
