--- a/src/app/filter-by/filter-by.component.html
+++ b/src/app/filter-by/filter-by.component.html
@@ -1,30 +1,16 @@
 <div class="card-header">
-  <div class="row">
-    <div class="col-12">
-      <strong>Filter By</strong>
-    </div>
+  <h6 class="mb-0">Select a Filter</h6>
+  <small>&nbsp;</small>
+</div>
+<div class="card-body p-0">
+  <div class="list-group list-group-flush">
+    <a class="list-group-item list-group-item-action" [routerLink]="['/tech']" >
+      <i class="fa fa-code col-1" aria-hidden="true"></i>
+      <span class="col-10">Technologies</span>
+    </a>
+    <a class="list-group-item list-group-item-action" [routerLink]="['/companies']">
+      <i class="fa fa-building-o col-1" aria-hidden="true"></i>
+      <span class="col-10">Companies</span>
+    </a>
   </div>
 </div>
-
-<ul class="list-group list-group-flush">
-  <li class="list-group-item list-group-item-action" [routerLink]="['/tech']">
-    <div class="row">
-      <div class="col-1">
-        <i class="fa fa-code" aria-hidden="true"></i>
-      </div>
-      <div class="col-10">
-        Technologies
-      </div>
-    </div>
-  </li>
-  <li class="list-group-item list-group-item-action" [routerLink]="['/companies']">
-    <div class="row">
-      <div class="col-1">
-        <i class="fa fa-building-o" aria-hidden="true"></i>
-      </div>
-      <div class="col-10">
-        Companies
-      </div>
-    </div>
-  </li>
-</ul>
