--- a/src/app/tech-list/tech-list.component.html
+++ b/src/app/tech-list/tech-list.component.html
@@ -6,13 +6,16 @@
 </div>
 <div class="card-header">
   <h6 class="mb-0">Technologies</h6>
-  <small>{{companyService.companies.length}} companies</small>
+  <small>{{companyService.techs.length}} technologies</small>
 </div>
 <div class="card-body p-0">
   <div class="list-group list-group-flush">
-    <a *ngFor="let tech of techs" class="list-group-item list-group-item-action" [routerLink]="['/tech', tech]">
+    <a *ngFor="let tech of techs" class="list-group-item list-group-item-action" [routerLink]="['/tech', tech.name]">
       <i class="fa fa-code col-1" aria-hidden="true"></i>
-      <span class="col-10">{{tech}}</span>
+      <span class="col-10">{{tech.name}}</span>
+      <div class="progress" style="height: 4px;">
+        <div class="progress-bar" role="progressbar" [style.width]="tech.percentage + '%'" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
     </a>
   </div>
 </div>
