--- a/src/app/companies-by-tech/companies-by-tech.component.html
+++ b/src/app/companies-by-tech/companies-by-tech.component.html
@@ -11,7 +11,7 @@
 <div class="card-body p-0">
   <div class="list-group list-group-flush">
     <a *ngFor="let company of companyService.companies" class="list-group-item list-group-item-action" [routerLink]="['/tech',tech,company.id]">
-      <i class="text-{{company.sponsorship || dark}} col-1 fa" [ngClass]="{'fa-building-o': !company.sponsorship, 'fa-trophy': company.sponsorship }"  aria-hidden="true"></i>
+      <i class="text-{{company?.sponsorship || 'dark'}} col-1 fa" [ngClass]="{'fa-building-o': !company?.sponsorship, 'fa-trophy': company?.sponsorship }"  aria-hidden="true"></i>
       <span class="col-10">{{company.name}}</span>
     </a>
   </div>
